--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ cache:
 # 运行的脚本命令 - npm run ci
 script:
   - echo "Skipping tests"
+  - yarn docs:build
 
 # 指定分支，只有指定的分支提交时才会运行脚本
 branches:
@@ -17,13 +18,13 @@ branches:
     - master
 # 指定安装的依赖
 install:
-  - npm install
-  - npm run docs:build
+  - yarn global add vuepress
+  - yarn install
 # 自动部署
 deploy:
   provider: pages
   skip-cleanup: true
-  github-token: 020237be618367a02b19e2aedf2d4cb1866bba47  # Set in travis-ci.org dashboard, marked secure https://docs.travis-ci.com/user/deployment/pages/#Setting-the-GitHub-token
+  github-token: ed57dk5rVoxFDHW5lCUE3Q  # Set in travis-ci.org dashboard, marked secure https://docs.travis-ci.com/user/deployment/pages/#Setting-the-GitHub-token
   target-branch: gh-pages
   local-dir: dist
   on:
