--- a/.travis.yml
+++ b/.travis.yml
@@ -5,17 +5,16 @@ cache:
   directories:
   - node_modules
 script:
-- echo "Skipping tests"
+- yarn docs:build
 branches:
   only:
   - master
 install:
 - yarn install
-- yarn docs:build
 deploy:
   provider: pages
   skip-cleanup: true
-  github-token: $GITHUB_TOKEN
+  github-token: $GITHUB_TOKEN # Set in the settings page of your repository, as a secure variable
   target-branch: gh-pages
   local-dir: dist
   on:
